# Causal-Game-Analysis

./: .gitignore  2026-01-08-your-branch-is-up-to-date-with-originmain.txt  README.md  causal-game-analysis.text  pyproject.toml  test_framework.py
cuda_bargain/: CMakeLists.txt  pyproject.toml  setup.py
cuda_bargain/include/: bargain_game.h  bargain_kernels.cuh
cuda_bargain/python/: __init__.py  bargain_env.py
cuda_bargain/src/: bargain_game.cu  python_bindings.cpp
rl_training/: README.md  __init__.py
rl_training/algorithms/: __init__.py
rl_training/algorithms/cfr/: __init__.py  config.py  regret_tables.py  trainer.py
rl_training/algorithms/ex2psro/: __init__.py  config.py  trainer.py
rl_training/algorithms/fcp/: __init__.py  config.py  trainer.py
rl_training/algorithms/impala/: __init__.py  actor.py  config.py  learner.py  parameter_server.py  trainer.py
rl_training/algorithms/is_mcts/: __init__.py  config.py  search.py
rl_training/algorithms/mappo/: __init__.py  config.py  trainer.py
rl_training/algorithms/nfsp/: __init__.py  config.py  trainer.py
rl_training/algorithms/nfsp_bargain/: __init__.py  config.py  trainer.py
rl_training/algorithms/ppo_bargain/: __init__.py  config.py  trainer.py
rl_training/algorithms/psro/: __init__.py  config.py  trainer.py
rl_training/algorithms/sampled_cfr/: __init__.py  config.py  trainer.py
rl_training/baselines/: __init__.py  always_walk_policy.py  fair_split_policy.py  greedy_policy.py  random_policy.py
rl_training/core/: __init__.py  base_config.py  base_policy.py  base_trainer.py  registry.py
rl_training/envs/: __init__.py  bargain_wrapper.py  env_wrapper.py  gymnasium_wrapper.py  openspiel_wrapper.py
rl_training/impala/: __init__.py  actor.py  learner.py  storage.py  train.py  vtrace.py
rl_training/llm_policies/: __init__.py  base.py  openai_policy.py
rl_training/networks/: __init__.py  bargain_mlp.py  transformer_policy.py
rl_training/utils/: __init__.py  checkpointing.py  logging.py  replay_buffer.py  results_manager.py
scripts/: README.md  evaluate_baselines.py  evaluate_crossplay.py  evaluate_with_search.py  hyperparameter_sweep.py  run_sweep.py  train_ex2psro.py  train_fcp.py  train_mappo.py  train_nfsp_bargain.py  train_ppo_bargain.py  train_psro.py  train_sampled_cfr.py  view_results.py
simulator/python/: __init__.py  bargain_env_cpu.py
simulator/tests/: test_env_cpu.py
solvers/: mene.py
src/causal_game_analysis/: __init__.py  analysis.py  bootstrap.py  metagame.py
src/causal_game_analysis/solvers/: __init__.py  mene.py
src/iterative_game_analysis/: __init__.py  analysis.py  bootstrap.py  metagame.py  utils.py
src/iterative_game_analysis/solvers/: __init__.py  base.py  cce.py  lle.py  mene.py
sweeps/: README.md  sweep_all_algorithms.yaml  sweep_ex2psro.yaml  sweep_fcp.yaml  sweep_mappo.yaml  sweep_nfsp.yaml  sweep_ppo.yaml  sweep_psro.yaml  sweep_sampled_cfr.yaml
tests/: test_bootstrap_full_analysis.py  test_cce_solver.py  test_lle_solver.py
visuals/: avg_best_response_graph_visual.py
