[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_bargain"
version = "0.1.0"
description = "CUDA-accelerated Bargaining Game Environment for Deep RL"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]
